Added Search Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,6 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <h2>{{ num }}</h2>
-  <button (click)="changeNumber()"></button>
-  <app-test [works]="num" [changed]="parentChanged"></app-test>
+  <app-search></app-search>
 </div>
 
